[package]
name = "rogiso"
version = "0.1.0"
authors = ["Minun <dragonation@gmail.com>"]
edition = "2018"

[dependencies]

[lib]
name = "rogiso"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2018"
crate-type = ["lib"]
required-features = []
